--- a/index.html
+++ b/index.html
@@ -7,34 +7,29 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
   <body>
-        <div>
+    <-- Semantic html by using section instead of div-->
+        <section>
           <h1>Mahamud Aden</h1>
-          <p>Hard-working, optimistic indivitual with passion to learn new stuffs espacialy technology related studies.  </p>
+          <p>Hard-working, optimistic indivitual with passion to learn new stuffs espacialy technology related studies.</p>
           </div>
           <div class="exp-header">
            <h3> Professional Experiance<?h3>
-        </div>
+        </section>
 
-      <div>
+      <section>
 
       <h4>Nation Link Ethio Telecom</h4>
       <h5>General Manager</h5>
       <h6>May 2019 -November 2021</h6>
         <ul>
-            <li>Responsible for leading and management of the company.
-            </li> 
-            <li>
-              Achieved successful marketing and sales performance during the job.
-            </li> 
-             <li>
-               Developed good staff, client and customer communication skills.
-
-             </li> 
+            <li>Responsible for leading and management of the company.</li> 
+            <li> Achieved successful marketing and sales performance during the job.</li> 
+             <li> Developed good staff, client and customer communication skills.</li> 
         </ul>
     
-      </div>
+      </section>
 
-      <div>
+      <section>
 
             <h4>Care for the Vulnerable</h4>
             <h5>Executive Director</h5>
@@ -45,8 +40,8 @@
                <li>Engaged community and stakeholders successfully. </li> 
             </ul>
 
-          </div>
-      <div>
+          </section>
+      <section>
 
           <h4>Somali Region Livestock Crop & Rural Development Bureau.</h4>
           <h5>Acountant</h5>
@@ -57,8 +52,9 @@
                  <li>Developed good financial reoprting skills. </li> 
             </ul>
     
-      </div>
-      <div>
+      </section>
+
+       <Section>
 
             <h4>Jigjiga City Administration Education Bureau.</h4>
             <h5>Head of Supervision</h5>
@@ -70,17 +66,17 @@
 
               </ul>
 
-          </div>
+          </section>
 
-     <div class="exp-header">
+     <section class="exp-header">
              <h3> Education</h3>
-          </div>
+          </section>
 
-               <div>
+               <section>
             <h5> Bachelor of Art - Public Adminitration & Developement Management. </h5>
             <h6> Addis Ababa University, Ethiopia Compeleted - 2011 </h6>
 
-             </div>
+             </section>
       </body>
 </html>
 
