--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <img class="image" src="https://e7.pngegg.com/pngimages/605/888/png-clipart-resume-curriculum-vitae-template-moto-highway-racing-computer-icons-resume-blue-text.png"/>
         <section>
           <h1>Mahamud Aden</h1>
+          <h4>Email: mahamudadn@gmail.com</h4>
+          <h4>Phone: 612-806-2773</h4>
           <p>Hard-working, optimistic indivitual with passion to learn new stuffs espacialy technology related studies.</p>
           </div>
           <div class="exp-header">
